--- a/src/global.css
+++ b/src/global.css
@@ -262,6 +262,7 @@ main {
   height: 39px;
 }
 .mainWalletBadge:hover {
+  background: #BDBDBD;
   font-weight: bold;
 }
 .mainWalletContainer {
@@ -1084,6 +1085,14 @@ h1 {
   flex-grow: 1;
 }
 
+#splash1Objects {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 #splashArtistDescBox {
   display: grid;
   grid-template-columns: 30% 70%;
@@ -1148,6 +1157,9 @@ h1 {
   border: none;
   width: 185px;
   height: 60px;
+}
+#splashBuy button:hover {
+  background: linear-gradient(97.12deg, rgba(26, 145, 255, 0.97) -5.56%, #FB27FF 21.49%, #11D4FF 47.9%, #1875FF 74.65%, #DF17FF 110.09%);;
 }
 
 .splash-eq {
