--- a/src/global.css
+++ b/src/global.css
@@ -1167,6 +1167,7 @@ h1 {
   margin-left: 60px;
   padding: 10px 10px 0 10px;
   border-radius: 25px;
+  overflow-y: scroll;
 }
 
 #splash1Objects {
